--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8">
-  <title>Hero Pro</title>
+  <title>두리산</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
