--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title>DOORISAN FARM</title>
+    <title>두리산농장 - 꽃송이버섯, 참송이, 포도, 와송 판매</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="경상북도 상주시에 위치한 우리 농장은 꽃송이버섯(선물세트), 참송이버섯, 포도, 와송 등을 판매하고 있습니다. 꽃송이버섯은 잘 알려진 약용버섯으로서 베타글루칸이 많이 함유된 식품입니다. 항암효과 및 면역력 증진에 큰 도움이 됩니다.">
+    <meta name="keywords" content="꽃송이버섯,참송이버섯,포도,청포도,샤인머스켓,와송,백화포도,선물세트,농산물판매">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script>
     /*
